login page - fix alignment

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -716,7 +716,7 @@ html ul
   display: block
   position: relative
   color: #fff
-  margin-top: 20%
+  margin-top: 50px
   font-family: 'LatoRegular'
 
 .logout
